version 2.1 alpha - Guardian of Fire - (tba)

	* cleanups
	* edit area for a bookmark 
	* documentation and sql setup cleanup

version 2.0alpha - Bright Crucible - (2017-01-05)

	* This is a not prodction ready version of the complete rewrite.
	* It is now written in PHP based on the idea from Luke Reeves

version 1.5 (30 Nov. 2012)

	* support phantomjs as a screenshot tool for a bookmark
	* code updates and cleanup

version 1.1 (20 Feb. 2012)

	* older and newer link at the top no working
	* bug with path to the jquery.js file
	* some statistics
	* options can be ordered now
	* tool to check the bookmarks

version 1.0 (15. Feb 2012)

	* jumpin.banana
	* tag suggest was not working correctly.
	* tag rename feature implemented
	* tag rename case sensitive problem
	* add bookmark only if url and title are not empty
	* tag delete is available now. It moves the selected bookmarks
		to another one
	* bookmarks without a tag can be selected now
	* Fix the text/html content type going that's snapshotted
		This is not needed. Since we use the charset info
		to determine utf, we need this information
	* Insert SQL more save now

Tue Jul 14 21:38 EST 2009  Luke Reeve   <luke@neuro-tech.net>

	* Fix the option "proxy_host" not being saved correctly.

Sun Jul 12 11:00 EST 2009  Luke Reeves  <luke@neuro-tech.net>

	* Fixed the Perl 5.10 module reloading bug.
	* Fixed snapshotting functionality

Sat Jul 11 23:30 EST 2009  Luke Reeves  <luke@neuro-tech.net>

	* Dusted off the codebase, kicked the tires and finally
	  finished off the git migration.

Mon Mar 27 18:59 EST 2006  Luke Reeves  <luke@neuro-tech.net>

	* Added an option for disabling mod_rewrite support
	* Added a prefix option for database tables

Tue Mar 21 19:34 EST 2006  Luke Reeves	<luke@neuro-tech.net>

	* Fix the export system

Tue Feb 21 12:30 EST 2006  Luke Reeves  <luke@neuro-tech.net>

	* Fix up database connectivity for newer PostgreSQL
	  libraries
	* Incorporate patch from Paul Boin that allows importing