@@ -3,6 +3,11 @@ version 2.1 alpha - Guardian of Fire - (tba)
 	* cleanups
 	* edit area for a bookmark 
 	* documentation and sql setup cleanup
+	* new design with bulma.css (https://bulma.io/)
+	* added SEO information to "prevent" crawling and a robots.txt file
+	* new option to restrict access via http basic auth.
+	* very simple user authentication based on http basic auth.
+		Needs improvement in further releases
 
 version 2.0alpha - Bright Crucible - (2017-01-05)
 
